--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -111,6 +111,8 @@
 
 .copyok{position: fixed;padding: 12px 24px;left: calc(50vw - 100px);top: 0;background-color: #81d296;box-shadow: 0 0.2em 0.1em 0.1em rgba(71,210,121,0.2);border-radius: 8px;opacity: 0}
 
+.dowload{cursor: pointer}
+
 #b04 { width: 1200px;}
 
 #b04 .dots { position: absolute; left: 0; right: 0; bottom: 20px;}
